@@ -2,25 +2,23 @@ package com.giftpile.controller;
 
 import com.giftpile.dto.GiftDTO;
 import com.giftpile.dto.UserDTO;
-import com.giftpile.entity.Gift;
 import com.giftpile.entity.User;
+import com.giftpile.exception.NotFoundException;
 import com.giftpile.repository.GiftRepository;
 import com.giftpile.repository.UserRepository;
 import com.giftpile.service.AdminService;
+import com.giftpile.service.CurrentUserService;
 import com.giftpile.service.GiftVisibilityService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+/** User management for admins. Gated to ROLE_ADMIN in the security config. */
 @RestController
 @RequestMapping("/api/admin")
 public class AdminController {
@@ -31,122 +29,98 @@ public class AdminController {
   private final PasswordEncoder passwordEncoder;
   private final GiftVisibilityService visibilityService;
   private final AdminService adminService;
+  private final CurrentUserService currentUser;
 
   public AdminController(UserRepository userRepository, GiftRepository giftRepository,
-                         PasswordEncoder passwordEncoder,
-                         GiftVisibilityService visibilityService, AdminService adminService) {
+                         PasswordEncoder passwordEncoder, GiftVisibilityService visibilityService,
+                         AdminService adminService, CurrentUserService currentUser) {
     this.userRepository = userRepository;
     this.giftRepository = giftRepository;
     this.passwordEncoder = passwordEncoder;
     this.visibilityService = visibilityService;
     this.adminService = adminService;
-  }
-
-  private User getCurrentUser() {
-    Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-    if (auth == null) return null;
-    return userRepository.findByName(auth.getName()).orElse(null);
+    this.currentUser = currentUser;
   }
 
   @GetMapping("/users")
-  public ResponseEntity<List<UserDTO>> getAllUsers() {
-    List<UserDTO> users = userRepository.findAll().stream()
-      .map(UserDTO::from)
-      .collect(Collectors.toList());
-    return ResponseEntity.ok(users);
+  public List<UserDTO> getAllUsers() {
+    return userRepository.findAll().stream().map(UserDTO::from).toList();
   }
 
   @PostMapping("/users")
-  public ResponseEntity<?> createUser(@RequestBody CreateUserRequest req) {
-    if (req.name == null || req.name.isBlank() || req.password == null || req.password.isEmpty()) {
-      return ResponseEntity.badRequest().body(Map.of("error", "Name and password are required"));
+  public ResponseEntity<UserDTO> createUser(@RequestBody UserRequest req) {
+    if (req.name() == null || req.name().isBlank()) {
+      throw new IllegalArgumentException("Name is required");
     }
-    if (userRepository.findByName(req.name).isPresent()) {
-      return ResponseEntity.status(400).body(Map.of("error", "User already exists"));
+    if (req.password() == null || req.password().isEmpty()) {
+      throw new IllegalArgumentException("Password is required");
+    }
+    if (userRepository.findByName(req.name()).isPresent()) {
+      throw new IllegalArgumentException("A user with that name already exists");
     }
 
-    long userCount = userRepository.count();
-    String color = COLORS[(int) (userCount % COLORS.length)];
-
-    User user = new User(req.name, passwordEncoder.encode(req.password), color);
-    user.setIsAdmin(req.isAdmin != null ? req.isAdmin : false);
+    String color = COLORS[(int) (userRepository.count() % COLORS.length)];
+    User user = new User(req.name(), passwordEncoder.encode(req.password()), color);
+    user.setIsAdmin(Boolean.TRUE.equals(req.isAdmin()));
 
     User saved = userRepository.save(user);
     return ResponseEntity.status(HttpStatus.CREATED).body(UserDTO.from(saved));
   }
 
   @PutMapping("/users/{id}")
-  public ResponseEntity<?> updateUser(@PathVariable Long id, @RequestBody UpdateUserRequest req) {
-    User user = userRepository.findById(id).orElse(null);
-    if (user == null) {
-      return ResponseEntity.notFound().build();
+  public UserDTO updateUser(@PathVariable Long id, @RequestBody UserRequest req) {
+    User user = userRepository.findById(id)
+      .orElseThrow(() -> new NotFoundException("User not found"));
+
+    if (req.name() != null && !req.name().equals(user.getName())) {
+      if (req.name().isBlank()) {
+        throw new IllegalArgumentException("Name is required");
+      }
+      if (userRepository.findByName(req.name()).isPresent()) {
+        throw new IllegalArgumentException("A user with that name already exists");
+      }
+      user.setName(req.name());
+    }
+    if (req.password() != null && !req.password().isEmpty()) {
+      user.setPasswordHash(passwordEncoder.encode(req.password()));
+    }
+    if (req.isAdmin() != null) {
+      if (!req.isAdmin() && user.getIsAdmin() && adminService.getAdminCount() == 1) {
+        throw new IllegalArgumentException("Cannot remove the last admin");
+      }
+      user.setIsAdmin(req.isAdmin());
     }
 
-    long adminCount = adminService.getAdminCount();
-
-    // Prevent removing admin rights from the last remaining admin.
-    if (req.isAdmin != null && !req.isAdmin && user.getIsAdmin() && adminCount == 1) {
-      return ResponseEntity.status(400).body(Map.of("error", "Cannot remove the last admin"));
-    }
-
-    if (req.name != null) user.setName(req.name);
-    if (req.password != null && !req.password.isEmpty()) {
-      user.setPasswordHash(passwordEncoder.encode(req.password));
-    }
-    if (req.isAdmin != null) user.setIsAdmin(req.isAdmin);
-
-    User saved = userRepository.save(user);
-    return ResponseEntity.ok(UserDTO.from(saved));
+    return UserDTO.from(userRepository.save(user));
   }
 
   @DeleteMapping("/users/{id}")
-  public ResponseEntity<?> deleteUser(@PathVariable Long id) {
-    User current = getCurrentUser();
-    if (current == null) {
-      return ResponseEntity.status(401).build();
-    }
+  public ResponseEntity<Void> deleteUser(@PathVariable Long id) {
+    User current = currentUser.require();
 
     Optional<String> validationError = adminService.validateDeletion(id, current.getId());
     if (validationError.isPresent()) {
-      return ResponseEntity.status(400).body(Map.of("error", validationError.get()));
+      throw new IllegalArgumentException(validationError.get());
     }
 
     adminService.deleteUser(id);
     return ResponseEntity.ok().build();
   }
 
+  /**
+   * The gifts of a user, as seen by an admin editing their list. This is a blind context — the
+   * admin sees every gift (including received ones) but never any claim data.
+   */
   @GetMapping("/users/{id}/gifts")
-  public ResponseEntity<List<GiftDTO>> getUserGifts(@PathVariable Long id) {
-    User user = userRepository.findById(id).orElse(null);
-    if (user == null) {
-      return ResponseEntity.notFound().build();
-    }
+  public List<GiftDTO> getUserGifts(@PathVariable Long id) {
+    User user = userRepository.findById(id)
+      .orElseThrow(() -> new NotFoundException("User not found"));
 
-    List<Gift> gifts = giftRepository.findByOwnerIdOrderByStatus(user.getId());
-
-    // Admin viewing a user's gifts is a blind context (like the owner viewing their own list):
-    // no claim data is exposed, so the admin can't see who is giving what.
-    List<Gift> filtered = visibilityService.filterForViewer(gifts, id, id, true);
-
-    List<GiftDTO> dtos = filtered.stream()
-      .map(gift -> {
-        boolean effectiveReceived = visibilityService.isEffectiveReceived(gift, null, LocalDate.now());
-        return new GiftDTO(gift, null, effectiveReceived);
-      })
-      .collect(Collectors.toList());
-
-    return ResponseEntity.ok(dtos);
+    LocalDate today = LocalDate.now();
+    return giftRepository.findByOwnerIdOrderByStatus(user.getId()).stream()
+      .map(gift -> GiftDTO.of(gift, null, visibilityService.isEffectiveReceived(gift, null, today)))
+      .toList();
   }
 
-  public static class CreateUserRequest {
-    public String name;
-    public String password;
-    public Boolean isAdmin;
-  }
-
-  public static class UpdateUserRequest {
-    public String name;
-    public String password;
-    public Boolean isAdmin;
-  }
+  public record UserRequest(String name, String password, Boolean isAdmin) {}
 }
